# OpenCMSG4

./: .gitignore  CMakeLists.txt  ECalActionInitialization.hh  ECalCellParameterisation_tracker.hh  ECalConstants.hh  ECalDetectorConstruction.hh  ECalECSD_left.hh  ECalEmCalorimeterHit.hh  ECalEventAction.hh  ECalMagneticField.hh  ECalPrimaryGeneratorAction.hh  ECalRunAction.hh  ECaltrackerHit.hh  GNUmakefile  OpenCMSG4.cc  PhysicsConfiguration.txt  ProcessList.txt  README.md  ecal.cc  exampleOpenCMSG4.in  exampleOpenCMSG4.out  exampleRun_hepmc.mac  exampleRun_particle.mac  gui.mac  init.mac  init_vis.mac  particles.txt  readTrackerPixel.cc  vis.mac
include/: #Constants.hh#  ActionInitialization.hh  Analysis.hh  B4CustomPhysics.hh  B4PhysicsList.hh  Constants.hh  Constants.hh~  CustomPDGParser.hh  CustomParticleFactory.hh  DetectorConstruction.hh  DetectorConstruction.hh~  ECalAnalysis.hh  ECalCellParameterisation.hh  ECalConstruction.hh  ECalConstruction.hh~  ECalECHit.hh  ECalECHit_left.hh  ECalECParameterisation.hh  ECalECSD.hh  ECalEmCalorimeterSD.hh  ECalSteppingAction.hh  ECalWorldHit.hh  ECalWorldSD.hh  ECaltrackerSD.hh  EventAction.hh  EventAction.hh~  FullModelHadronicProcess.hh  HCalConstruction.hh  HepMCAsciiReader.hh  HepMCAsciiReaderMessenger.hh  MagneticField.hh  MagneticField2.hh  MuonConstruction.hh  ParticleGun.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.hh  RunAction.hh  RunAction.hh~  SteppingAction.hh  TrackConstruction.hh~  (+3 more)
src/: ActionInitialization.cc  ActionInitialization.cc~  B4CustomPhysics.cc  B4PhysicsList.cc  CustomPDGParser.cc  CustomParticle.cc  CustomParticleFactory.cc  Decay3Body.cc  DetectorConstruction.cc  DetectorConstruction.cc~  ECalActionInitialization.cc  ECalCellParameterisation.cc  ECalCellParameterisation_tracker.cc  ECalConstruction.cc  ECalConstruction.cc~  ECalDetectorConstruction.cc  ECalECHit.cc  ECalECHit_left.cc  ECalECParameterisation.cc  ECalECSD.cc  ECalECSD_left.cc  ECalEmCalorimeterHit.cc  ECalEmCalorimeterSD.cc  ECalEventAction.cc  ECalMagneticField.cc  ECalPrimaryGeneratorAction.cc  ECalRunAction.cc  ECalSteppingAction.cc  ECalWorldHit.cc  ECalWorldSD.cc  ECaltrackerHit.cc  ECaltrackerSD.cc  EventAction.cc  EventAction.cc~  FullModelHadronicProcess.cc  G4ProcessHelper.cc  HCalConstruction.cc  HCalConstruction.cc~  HadronicProcessHelper.cc  HepMCAsciiReader.cc  (+18 more)
test/pixelationCheck/: ConsistencyCheck1.cc  ConsistencyCheck1_parallel.cc  ConsistencyCheck2.cc  ConsistencyCheck_bitstorage.cc  ConsistencyCheckrhopixel.cc  a.out  cnschk1.out
